feat: roadmap com descricao/links por etapa, 4 estados de progresso e conteudo expandido
Adiciona descricao e links curados por etapa (com CRUD proprio), troca o
progresso binario por 4 estados (pendente/aprendendo/concluido/pulado), e
expande fortemente o conteudo dos roadmaps predefinidos: generaliza
"Backend Java" para "Backend", amplia Frontend/DevOps/Full-Stack Web e
cria o roadmap Mobile do zero. Corrige tambem o link "Roadmaps" do menu,
que estava pulando direto pro ultimo roadmap visitado em vez da lista.