@@ -2,15 +2,18 @@ package com.astra.roadmap;
 
 import com.astra.roadmap.dto.CreateRoadmapRequest;
 import com.astra.roadmap.dto.CreateStepRequest;
+import com.astra.roadmap.dto.ResourceResponse;
 import com.astra.roadmap.dto.RoadmapDetailResponse;
 import com.astra.roadmap.dto.RoadmapResponse;
 import com.astra.roadmap.dto.StepResponse;
 import com.astra.roadmap.dto.UpdateStepRequest;
 import com.astra.shared.CurrentUserProvider;
 import com.astra.shared.exception.NotFoundException;
+import java.util.Comparator;
 import java.util.List;
-import java.util.Set;
+import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -20,14 +23,17 @@ public class RoadmapService {
     private final RoadmapRepository roadmapRepository;
     private final RoadmapStepRepository stepRepository;
     private final RoadmapStepCompletionRepository completionRepository;
+    private final RoadmapStepResourceRepository resourceRepository;
     private final CurrentUserProvider currentUserProvider;
 
     public RoadmapService(RoadmapRepository roadmapRepository, RoadmapStepRepository stepRepository,
                           RoadmapStepCompletionRepository completionRepository,
+                          RoadmapStepResourceRepository resourceRepository,
                           CurrentUserProvider currentUserProvider) {
         this.roadmapRepository = roadmapRepository;
         this.stepRepository = stepRepository;
         this.completionRepository = completionRepository;
+        this.resourceRepository = resourceRepository;
         this.currentUserProvider = currentUserProvider;
     }
 
@@ -51,12 +57,22 @@ public class RoadmapService {
         UUID userId = currentUserProvider.currentUserId();
         Roadmap roadmap = accessibleRoadmap(roadmapId);
         List<RoadmapStep> steps = stepRepository.findByRoadmapIdOrderByPosition(roadmapId);
-        Set<UUID> completedStepIds = steps.isEmpty()
-                ? Set.of()
-                : Set.copyOf(completionRepository.findCompletedStepIds(userId,
-                        steps.stream().map(RoadmapStep::getId).toList()));
+        List<UUID> stepIds = steps.stream().map(RoadmapStep::getId).toList();
+
+        Map<UUID, StepStatus> statusByStep = stepIds.isEmpty()
+                ? Map.of()
+                : completionRepository.findStatusesForUser(userId, stepIds).stream()
+                        .collect(Collectors.toMap(RoadmapStepCompletion::getStepId, RoadmapStepCompletion::getStatus));
+
+        Map<UUID, List<ResourceResponse>> resourcesByStep = stepIds.isEmpty()
+                ? Map.of()
+                : resourceRepository.findByStepIdInOrderByPosition(stepIds).stream()
+                        .collect(Collectors.groupingBy(RoadmapStepResource::getStepId,
+                                Collectors.mapping(this::toResourceResponse, Collectors.toList())));
+
         List<StepResponse> stepResponses = steps.stream()
-                .map(step -> toStepResponse(step, completedStepIds.contains(step.getId())))
+                .map(step -> toStepResponse(step, statusByStep.get(step.getId()),
+                        resourcesByStep.getOrDefault(step.getId(), List.of())))
                 .toList();
         return new RoadmapDetailResponse(roadmap.getId(), roadmap.getTitle(), roadmap.getSource(),
                 roadmap.getOwnerId() == null, stepResponses);
@@ -73,13 +89,14 @@ public class RoadmapService {
                 throw new NotFoundException("Parent step not found");
             }
         }
-        RoadmapStep step = new RoadmapStep(roadmap, request.title(), request.position(), parentStepId);
+        RoadmapStep step = new RoadmapStep(roadmap, request.title(), request.position(), parentStepId,
+                request.description());
         RoadmapStep saved = stepRepository.save(step);
-        return toStepResponse(saved, false);
+        return toStepResponse(saved, null, List.of());
     }
 
     @Transactional
-    public StepResponse setStepCompleted(UUID roadmapId, UUID stepId, UpdateStepRequest request) {
+    public StepResponse setStepStatus(UUID roadmapId, UUID stepId, StepStatus status) {
         UUID userId = currentUserProvider.currentUserId();
         accessibleRoadmap(roadmapId);
         RoadmapStep step = stepRepository.findById(stepId)
@@ -87,13 +104,14 @@ public class RoadmapService {
         if (!step.getRoadmap().getId().equals(roadmapId)) {
             throw new NotFoundException("Step not found");
         }
-        boolean exists = completionRepository.existsByUserIdAndStepId(userId, stepId);
-        if (request.completed() && !exists) {
-            completionRepository.save(new RoadmapStepCompletion(userId, stepId));
-        } else if (!request.completed() && exists) {
-            completionRepository.deleteByUserIdAndStepId(userId, stepId);
+        completionRepository.deleteByUserIdAndStepId(userId, stepId);
+        if (status != null) {
+            completionRepository.save(new RoadmapStepCompletion(userId, stepId, status));
         }
-        return toStepResponse(step, request.completed());
+        List<ResourceResponse> resources = resourceRepository.findByStepIdOrderByPosition(stepId).stream()
+                .map(this::toResourceResponse)
+                .toList();
+        return toStepResponse(step, status, resources);
     }
 
     private Roadmap accessibleRoadmap(UUID roadmapId) {
@@ -117,8 +135,13 @@ public class RoadmapService {
                 roadmap.getOwnerId() == null);
     }
 
-    private StepResponse toStepResponse(RoadmapStep step, boolean completed) {
+    private StepResponse toStepResponse(RoadmapStep step, StepStatus status, List<ResourceResponse> resources) {
         return new StepResponse(step.getId(), step.getTitle(), step.getPosition(), step.getParentStepId(),
-                completed);
+                status, step.getDescription(), resources);
+    }
+
+    private ResourceResponse toResourceResponse(RoadmapStepResource resource) {
+        return new ResourceResponse(resource.getId(), resource.getLabel(), resource.getUrl(),
+                resource.getPosition());
     }
 }
